src/objects/Account_Directory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Directories</relationshipLabel>
        <relationshipName>Account_Directories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Global Key Account Manager</fullName>
                </value>
                <value>
                    <fullName>Global Account Director</fullName>
                </value>
                <value>
                    <fullName>Delivery Head</fullName>
                </value>
                <value>
                    <fullName>Demand Head</fullName>
                </value>
                <value>
                    <fullName>Additional</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Directory</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>